# pool-factory

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  README_CN.md  README_EN.md
.github/workflows/: ci.yml  release.yml
docs/: tutorial.md
include/poolfactory/: concepts.hpp  pool.hpp  pool_config.hpp  pool_factory.hpp  pooled_resource.hpp  result.hpp  unit.hpp
src/: main.cpp
